go-gin-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: go-gin
  name: go-gin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-gin
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: go-gin
    spec:
      containers:
      - image: yoichi00/container-ren:go-gin
        name: go-gin
        resources: {}
status: {}
