ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-gin
spec:
  rules:
  - host: chat.192.168.99.109.nip.io
    http:
      paths:
      - backend:
          serviceName: go-gin
          servicePort: 8080
